@@ -1,3 +1,6 @@
+17:
+- Add priority setting
+
 16:
 - Update to 2017.05.23-1
 
